--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "subscription-tracker",
+  "name": "expotest",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "expo": "~49.0.8",
-    "expo-dev-client": "^2.4.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4"
