--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "expo-build-properties": "~0.5.1",
+    "expo-modules-autolinking": "~1.1.0",
+    "@react-native-firebase/app": "17.4.0",
+    "@react-native-firebase/auth": "17.4.0",
+    "@react-native-firebase/database": "17.4.0",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
