--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "17.4.0",
+    "@react-native-firebase/auth": "17.4.0",
+    "@react-native-firebase/database": "17.4.0",
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
+    "expo-build-properties": "~0.5.1",
+    "expo-modules-autolinking": "~1.1.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "typescript": "^5.1.3",
-    "expo-build-properties": "~0.5.1",
-    "expo-modules-autolinking": "~1.1.0",
-    "@react-native-firebase/app": "17.4.0",
-    "@react-native-firebase/auth": "17.4.0",
-    "@react-native-firebase/database": "17.4.0",
-    "expo-splash-screen": "~0.20.5"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
