--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-firebase/app": "17.4.0",
     "@react-native-firebase/auth": "17.4.0",
     "@react-native-firebase/database": "17.4.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
