--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-firebase/app": "17.4.0",
+    "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/auth": "17.4.0",
     "@react-native-firebase/database": "17.4.0",
     "@react-navigation/native": "^6.1.7",
@@ -26,7 +26,10 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
