--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/auth": "17.4.0",
@@ -19,6 +20,7 @@
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
+    "expo-font": "~11.4.0",
     "expo-modules-autolinking": "~1.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
