--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@react-native-picker/picker": "2.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
