--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
-    "@react-native-picker/picker": "2.4.10"
+    "@react-native-picker/picker": "2.4.10",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
