--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
     "@react-native-picker/picker": "2.4.10",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "@react-native-community/datetimepicker": "7.2.0",
+    "expo-image": "~1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
