--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "typescript": "^5.1.3",
     "@react-native-picker/picker": "2.4.10",
     "@react-native-community/datetimepicker": "7.2.0",
-    "expo-image": "~1.3.3"
+    "expo-image": "~1.3.3",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
