--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@expo/ngrok": "^4.1.1",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/auth": "17.4.0",
     "@react-native-firebase/database": "17.4.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
@@ -21,6 +24,7 @@
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
     "expo-font": "~11.4.0",
+    "expo-image": "~1.3.3",
     "expo-modules-autolinking": "~1.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -30,12 +34,9 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "@react-native-picker/picker": "2.4.10",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "expo-image": "~1.3.3",
-    "react-native-svg": "13.9.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
