--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@types/react": "~18.2.14",
     "expo": "~49.0.8",
     "expo-build-properties": "~0.8.3",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-image": "~1.3.3",
     "expo-modules-autolinking": "~1.5.0",
+    "expo-modules-core": "^1.5.11",
+    "expo-notifications": "~0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
@@ -36,10 +40,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "expo-notifications": "~0.20.1",
-    "expo-device": "~5.4.0",
-    "expo-constants": "~14.4.2"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
